=== Modified version of GNU Emacs for Mac OS X ===

Version 24.3-modified-5 ()
=========================================

NEW FEATURES

o polymode and markdown-mode are now included in the distribution.
  By default, polymode is active for R and markdown modes.

o All .el files (except configuration files default.el and
  site-start.el) are now also distributed byte-compiled.

UPDATES




Version 24.3-modified-4 (8 December 2013)
=========================================

NEW FEATURE

o Function and variable 'emacs-modified-version' to display and hold
  the distribution version number.

UPDATES

o ESS 13.09-1


Version 24.3-modified-3 (27 September 2013)
===========================================

UPDATES

o ESS 13.09


Version 24.3-modified-2 (15 May 2013)
=====================================

UPDATES

o ESS 13.05

(MORE OF LESS) USER VISIBLE CHANGES

o In site-start.el, 'inferior-R-args' no longer includes
  "--no-restore-history" as it apparently had no effect. Thanks to
  Vitalie Spinu for the rectification.

o In site-start.el, 'ess-default-style' is no longer defined to be
  "C++" since the default indentation style in ESS is now "RRR".


Version 24.3-modified-1 (13 March 2013)
=======================================

UPDATES

o GNU Emacs 24.3, released two days ago.

o The application is now code signed. This will ease installation on
  Moutain Lion systems. Thanks to David Caldwell for pointers on how
  to do this.


Version 24.2-modified-7 (23 January 2013)
=========================================

BUG FIX

o Fixed the startup warning message about org-install being
  deprecated. Unfinished job in previous release.


Version 24.2-modified-6 (18 January 2013)
=========================================

USER VISIBLE CHANGE

o Org is *removed* from the distribution as it triggered a warning
  message at Emacs startup. This may seem a rather drastic measure,
  but Org has proved annoying to support as an add-on to the